# dwave-networkx

./: .coveragerc  .gitignore  .travis.yml  LICENSE.txt  README.md  README.rst  dwave_networkx.py  elimination_ordering.py  pyproject.toml  requirements.txt  requirements_tests.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
ci_utils/: verify_version.py
docs/: Makefile  about_dwave.rst  algorithms.rst  api_ref.rst  bibliography.rst  conf.py  contributing.rst  default_sampler.rst  discrete_model_samplers.rst  drawing.rst  dwave.rst  generators.rst  glossary.rst  index.rst  installation.rst  intro.rst  license.rst  ocean.rst  requirements.txt  sdk_index.rst  utilities.rst
docs/drawing/: index.rst
docs/reference/: algorithms.rst  default_sampler.rst  drawing.rst  generators.rst  index.rst  intro.rst  introduction.rst  utilities.rst
docs/reference/algorithms/: canonicalization.rst  clique.rst  coloring.rst  cover.rst  elimination_ordering.rst  exact_cover.rst  index.rst  markov.rst  matching.rst  max_cut.rst  packing.rst  partition.rst  partitioning.rst  social.rst  tsp.rst
docs/reference/utilities/: index.rst
dw_networkx/: __init__.py  chimera_functions.py  elimination_ordering.py  main.py
dwave/: __init__.py
dwave/graphs/: __init__.py  default_sampler.py  exceptions.py  package_info.py  tuplelike.py
dwave/graphs/drawing/: __init__.py  chimera_layout.py  parallel_embeddings.py  pegasus_layout.py  qubit_layout.py  zephyr_layout.py
dwave/graphs/generators/: __init__.py  chimera.py  markov.py  pegasus.py  zephyr.py
dwave/graphs/generators/common/: __init__.py  common.py  coord.py  node_edge.py  planeshift.py  shape.py  topology.py
dwave/graphs/generators/zephyr/: __init__.py  zcoord.py  zephyr.py  znode_edge.py  zplaneshift.py  zshape.py
dwave/graphs/utils/: __init__.py  decorators.py
dwave/plugins/networkx/: __init__.py  default_sampler.py  exceptions.py  package_info.py
dwave/plugins/networkx/algorithms/: __init__.py  canonicalization.py  clique.py  coloring.py  cover.py  elimination_ordering.py  independent_set.py  markov.py  matching.py  max_cut.py  social.py  tsp.py
dwave/plugins/networkx/drawing/: __init__.py  chimera_layout.py  distinguishable_colors.py  pegasus_layout.py  qubit_layout.py
dwave/plugins/networkx/generators/: __init__.py  chimera.py  markov.py  pegasus.py
dwave/plugins/networkx/utils/: __init__.py  decorators.py
dwave_networkx/: __future_enum.py  __init__.py  architectures.py  default_sampler.py  elimination_ordering.py  exception.py  exceptions.py  main.py  package_info.py  topology.py
dwave_networkx/algorithms/: TSP.py  __init__.py  canonicalization.py  clique.py  clique_dw.py  coloring.py  coloring_dw.py  coloring_qa.py  cover.py  cover_dw.py  cover_qa.py  elimination_ordering.py  exact_cover.py  independent_set.py  markov.py  matching.py  matching_dw.py  matching_qa.py  max_cut.py  packing.py  packing_dw.py  packing_qa.py  partition.py  partitioning.py  social.py  social_dw.py  social_qubo.py  tsp.py
dwave_networkx/algorithms/tests/: solver.py  test_canonicalization.py  test_clique.py  test_coloring.py  test_cover.py  test_elimination_ordering.py  test_exact_cover.py  test_independent_set.py  test_markov.py  test_matching.py  test_max_cut.py  test_packing.py  test_social.py  test_tsp.py
dwave_networkx/algorithms_extended/: __init__.py  coloring.py  cover.py  elimination_ordering.py  matching.py  packing.py  social.py
dwave_networkx/algorithms_extended/tests/: samplers.py  test_coloring.py  test_cover.py  test_matching.py  test_packing.py  test_social.py
dwave_networkx/drawing/: __init__.py  chimera_layout.py  distinguishable_colors.py  draw_parallel_embeddings.py  parallel_embeddings.py  pegasus_layout.py  qubit_layout.py  visualize_parallel_embeddings.py  zephyr_layout.py
dwave_networkx/drawing/tests/: test_chimera_layout.py  test_pegasus_layout.py
dwave_networkx/drawing_extended/: __init__.py  chimera_layout.py
dwave_networkx/drawing_extended/tests/: test_chimera_layout.py
dwave_networkx/examples/: chimera_graph.py  fully_yielded_zephyr_subgraph.py  max_cut.py  max_independent_set.py  min_maximal_matching.py  min_vertex_color.py  min_vertex_cover.py
dwave_networkx/generators/: __init__.py  _zephyr_playground.py  chimera.py  common.py  common_graph.py  markov.py  pegasus.py  working_graph.py  zephyr.py
dwave_networkx/generators/tests/: test_chimera.py  test_common_graph.py  test_markov.py  test_pegasus.py  test_working_graph.py
dwave_networkx/tests/: test_chimera.py
dwave_networkx/utils/: __init__.py  decorators.py  test_samplers.py
dwave_networkx/utils/tests/: test_decorators.py
dwave_networkx/utils_dw/: __init__.py  decorators.py
dwave_networkx/utils_dw/tests/: test_decorators.py
dwave_networkx/utils_qa/: decorators.py
examples/: chimera_graph.py  max_cut.py  max_independent_set.py  min_maximal_matching.py  min_vertex_color.py  min_vertex_cover.py
releasenotes/notes/: add-py314-remove-py39-69a793c340335e2d.yaml  drop-deprecated-dnx-functions-003fb83793f68760.yaml  init-dwave-graphs-3892a6dd8f1027ec.yaml  modernize-package-4b392b6c4e82a254.yaml  update-build-ci-114095713132e635.yaml
tests/: README.rst  common.py  requirements.txt  test_canonicalization.py  test_chimera_layout.py  test_clique.py  test_coloring.py  test_cover.py  test_decorators.py  test_draw_parallel_embeddings.py  test_elimination_ordering.py  test_generator_chimera.py  test_generator_markov.py  test_generator_pegasus.py  test_generator_zephyr.py  test_independent_set.py  test_markov.py  test_matching.py  test_max_cut.py  test_parallel_embeddings.py  test_partitioning.py  test_pegasus_layout.py  test_qubit_layout.py  test_regular_coloring.py  test_social.py  test_tsp.py  test_visualize_parallel_embeddings.py  test_zcoord.py  test_zephyr_layout.py  test_zephyr_quotient_search.py  test_znode_edge.py  test_zplaneshift.py  test_zshape.py
