[build-system]
requires = [
    "setuptools>=77.0.3",   # PEP 639
]
build-backend = "setuptools.build_meta"

[project]
name = "dwave-graphs"
dynamic = ["version"]
authors = [
    {name = "D-Wave", email = "tools@dwavesys.com"},
]
description = "A package providing graphs and algorithms for working with D-Wave quantum computers."
readme = {file = "README.rst", content-type = "text/x-rst"}
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "dimod>=0.12.16,<0.13",     # oldest that supports numpy 2
    "networkx>=3.2,<4",         # oldest that supports numpy 2
    "numpy>=2,<3",
]
# note: 3.14.1 excluded due to a regression bug breaking dataclasses in NetworkX
# see: https://github.com/networkx/networkx/issues/8362,
# https://github.com/python/cpython/issues/142214
requires-python = ">=3.10, !=3.14.1"

[project.urls]
Changelog = "https://github.com/dwavesystems/dwave-graphs/releases"
Documentation = "https://docs.dwavequantum.com"
Issues = "https://github.com/dwavesystems/dwave-graphs/issues"
Repository = "https://github.com/dwavesystems/dwave-graphs.git"

[dependency-groups]
changelog = [
    "reno==4.1.0",
]
dev = [
    "numpy==2.2.6; python_version < '3.11'",    # latest that supports 3.10
    "numpy==2.4.4; python_version >= '3.11'",   # latest as of April 2026
    "dimod==0.12.21",       # latest that supports 3.10 through 3.14
    "networkx==3.4.2",      # latest that supports 3.10 (and numpy 2)
    {include-group = "changelog"},
]
docs = [
    # matches dwave-ocean-sdk as of April 2026
    "pydata-sphinx-theme==0.16.1",
    "sphinx==8.2.3",
    "sphinx-design==0.6.1",
]
test = [
    "coverage[toml]",
    "parameterized==0.9.0",     # latest as of April 2026
    "matplotlib==3.10.9",       # latest as of April 2026
]

[tool.setuptools.dynamic]
version = {attr = "dwave.graphs.__version__"}

[tool.setuptools.packages.find]
include = ["dwave.*"]

[tool.coverage.run]
omit = ["tests/*"]
source = ["dwave/graphs"]

[tool.coverage.report]
include_namespace_packages = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
